cleaned up for posterity

--- a/ComparingSequences.qmd
+++ b/ComparingSequences.qmd
@@ -6,7 +6,6 @@ editor_options:
 ---
 
 5/27/25
-
 New clean script for analysis determining ideal sequences for each watershed, and comparing them to sequences that are random, and dictated by proportion of time flowing, and topography.  
 
 Last markdown document was almost 10,000 lines, and getting unwieldy to navigate.  
@@ -14,6 +13,9 @@ Last markdown document was almost 10,000 lines, and getting unwieldy to navigate
 Explanation of graph theory stuff: finding the best path using the traveling salesman's problem. Usually this provides a cycle, but by making a dummy node at the end and then removing it we can trick the algorithm to produce a very efficient 1-way path.  
 
 Not sure if I should include the dummy or not; FB is a lot better with a dummy, but W3 and ZZ are a lot better without dummies at the end.
+
+6/30/25
+Formatted, should contain everything needed for current analysis. Have not checked for dependencies in other scripts. 
 
 # Setup and Preparing inputs
 ```{r setup}
@@ -5049,205 +5051,4 @@ for(i in 1:length(many_cheap)){
 many_chains
 
 ```
-
-# Unformatted
-SOLVED! BIG PROBLEM: sequence includes all nodes, but not all nodes are present at every timestep. Sequence needs to be adjusted at each timestep to reflect the nodes that are present dynamically....
-
-Function to calculate the comparison between botter model based on a provided sequence.
-```{r}
-comparison <- input_w3 %>% 
-  filter(mins %in% c(0, 30)) %>% 
-  left_join(cheap_model, by = c("datetime", "ID")) %>% 
-  left_join(pk_model, by = c("datetime", "ID")) %>% 
-    left_join(random_model, by = c("datetime", "ID")) %>% 
-  left_join(twi_model, by = c("datetime", "ID")) %>% 
-  select(-wshed, -mins) %>% 
-  drop_na()
-
-#chat gpt method to compare them
-get_eval_label <- function(true, pred) {
-  if (true == 1 && pred == 1) return("correct")
-  if (true == 0 && pred == 0) return("correct")
-  if (true == 1 && pred == 0) return("omission")
-  if (true == 0 && pred == 1) return("commission")
-}
-get_eval_label(0,0)
-#apply get_eval function to each model run
-comparison$cheapest_eval <- mapply(get_eval_label, comparison$binary, comparison$cheapest)
-comparison$pk_eval <- mapply(get_eval_label, comparison$binary, comparison$pk)
-comparison$random_eval <- mapply(get_eval_label, comparison$binary, comparison$random)
-comparison$twi_eval <- mapply(get_eval_label, comparison$binary, comparison$twi)
-
-
-comparison$comparison <- with(comparison, ifelse(
-  cheapest_eval == pk_eval, "equal",
-  ifelse(cheapest_eval == "correct", "cheap_better",
-         ifelse(pk_eval == "correct", "pk_better", "neither_better"))
-))
-
-summary_by_node <- comparison %>%
-  group_by(ID) %>%
-  summarize(
-    cheap_correct = sum(cheapest_eval == "correct"),
-    pk_correct = sum(pk_eval == "correct"),
-    random_correct = sum(random_eval == "correct"),
-    twi_correct = sum(twi_eval == "correct"),
-    cheap_omission = sum(cheapest_eval == "omission"),
-    pk_omission = sum(pk_eval == "omission"),
-    random_omission = sum(random_eval == "omission"),
-    twi_omission = sum(twi_eval == "omission"),
-    cheap_commission = sum(cheapest_eval == "commission"),
-    pk_commission = sum(pk_eval == "commission"),
-    random_commission = sum(random_eval == "commission"),
-    twi_commission = sum(twi_eval == "commission")
-  )
-
-#summarize through time
-df_summary_time <- comparison %>%
-  group_by(datetime) %>%
-  summarize(
-    cheap_correct = sum(cheapest_eval == "correct"),
-    pk_correct = sum(pk_eval == "correct"),
-    random_correct = sum(random_eval == "correct"),
-    twi_correct = sum(twi_eval == "correct"),
-    total = n(),
-    cheap_accuracy = cheap_correct / total,
-    pk_accuracy = pk_correct / total,
-    random_accuracy = random_correct / total,
-    twi_accuracy = twi_correct / total
-  )
-
-#df long with pk accuracy 
-df_long <- df_summary_time %>%
-  select(datetime, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
-  tidyr::pivot_longer(cols = c(cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy), 
-                      names_to = "model", values_to = "accuracy")
-
-
-four_colors <- c("#bb4430", "#7ebdc2", "#231f20", "#f3dfa2")
-
-#plot of the accuracy versus discharge, colored by scheme, shape by hydrograph component
-df_long %>% 
-  inner_join(discharge_df, by = "datetime") %>% 
-  #rename("Hydrograph Component", event_type)
-  #group_by(event_type, code) %>% 
-  #summarise(mean = mean(count)) %>% 
-  ggplot(aes(x = Q_mm_day, y = accuracy, color = model, shape = event_type)) +
-  geom_point(alpha = 0.3, size = 2) +
-    #geom_hline(yintercept = 0, linetype = "dashed") +
-  labs(title = "Accuracy (correctly modeled states/total)", y = " ", x = "Discharge (mm/day)")+
-   scale_color_manual(values = four_colors)+
-  labs(color='Hydrograph Component') +
-  theme_classic()+
-  facet_wrap(~model)
-
-
-```
-
-Chunk to find if there is any time when a different sequence is better than pk
-```{r}
-#summarize through time
-df_summary_time <- comparison %>%
-  group_by(datetime) %>%
-  summarize(
-    cheap_correct = sum(cheapest_eval == "correct"),
-    pk_correct = sum(pk_eval == "correct"),
-    random_correct = sum(random_eval == "correct"),
-    twi_correct = sum(twi_eval == "correct"),
-    total = n(),
-    cheap_accuracy = cheap_correct / total,
-    pk_accuracy = pk_correct / total,
-    random_accuracy = random_correct / total,
-    twi_accuracy = twi_correct / total
-  )
-
-df_summary_time <- df_summary_time %>%
-  mutate(diff = A_accuracy - B_accuracy)
-
-df_long <- df_summary_time %>%
-  select(datetime, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
-  tidyr::pivot_longer(cols = c(cheap_accuracy, random_accuracy, twi_accuracy), 
-                      names_to = "model", values_to = "accuracy") %>% 
-  mutate(diff = accuracy - pk_accuracy)
-
-#plot the difference in performance versus discharge
-df_long %>% 
-  inner_join(discharge_df, by = "datetime") %>% 
-  #rename("Hydrograph Component", event_type)
-  #group_by(event_type, code) %>% 
-  #summarise(mean = mean(count)) %>% 
-  ggplot(aes(x = Q_mm_day, y = diff, color = event_type)) +
-  geom_point(alpha = 0.5) +
-    geom_hline(yintercept = 0, linetype = "dashed") +
-  labs(title = "Difference in Accuracy (Cheapest - Prop of time flowing)", y = " ", x = "Discharge (mm/day)")+
-   scale_color_manual(values = c("#397367", "#FFA400", "#93C2F1"))+
-  labs(color='Hydrograph Component') +
-  theme_classic()+
-  facet_wrap(~model)
-```
-
-Figuring out weird points that are the same in each plot, when looking at accuracy versus discharge
-```{r}
-df_long %>% 
-  inner_join(discharge_df, by = "datetime") %>% 
-    filter(Q_mm_day >= 45) %>% 
-    ggplot(aes(x = Q_mm_day, y = accuracy, color = model, shape = event_type)) +
-  geom_point(alpha = 0.3, size = 2) +
-    #geom_hline(yintercept = 0, linetype = "dashed") +
-  labs(title = "Accuracy (correctly modeled states/total)", y = " ", x = "Discharge (mm/day)")+
-   scale_color_manual(values = four_colors)+
-  labs(color='Hydrograph Component') +
-  theme_classic()+
-  facet_wrap(~model)
-
-#set of timesteps where the accuracy of every model is the same, what does this look like in space?
-big_events <- df_long %>% 
-  inner_join(discharge_df, by = "datetime") %>% 
-    filter(Q_mm_day >= 45)
-
-doi <- big_events$datetime
-
-# states <- big_comb %>% 
-#     filter(datetime %in% doi[3])
-
-#w3_stic_locs_r %>% left_join(states, by = "ID")
-
-#figure without scale bar and legends
-states <- comparison %>% 
-    filter(datetime %in% doi) %>% 
-  pivot_longer(cols = c(cheapest, pk, random, twi),
-               values_to = "prediction", 
-               names_to = "sequence")
-
-states$eval <- mapply(get_eval_label, states$binary, states$prediction)
-
-ggplot()+
-  theme_void()+
-  geom_sf(data = w3_outline, fill = NA, color = "#FFD166", alpha = 0.3, lwd = 1)+
-  geom_sf(data = w3_net, colour = "grey", lwd = 0.8) +
-geom_sf(data = w3_stic_locs_r %>% inner_join(states, by = "ID"), 
-        aes(fill = as.character(prediction),
-            color = eval), size = 2, stroke = 1, pch = 21) +
-  scale_color_manual(values = c("green", "black", "orange"),
-                     name = "")+
-  scale_fill_manual(values = c("white", "black"),
-                    labels = c("dry", "flowing"),
-                    name = "")+
-  theme(rect = element_rect(fill = "transparent", color = NA),
-        legend.position = "")+
-  facet_grid(sequence~datetime)
-```
-
-
-
-
-Big problem- I do not have stage measurements from the dilutions that Logan did in August... the pressure transducers are still in the streams, I can download them in July if they are still logging.
-
-
-
-```{r}
-W3_cheap <- chain_solution(W3_IDs, "W3", methods = "cheapest_insertion")
-W3_random <- chain_solution(W3_IDs, "W3", methods = "random")
-```
-
 
